# Pagana

./: .gitignore  DESIGN_DOC_MVPv1.md  README.md  package.json  svelte.config.js  tsconfig.json
src/: index.css  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs
src/lib/: events.ts  tauri.ts
src/routes/: index.svelte
