[package]
name = "pagana"
version = "0.0.1"
description = "A RPG Mixer."
repository = "https://github.com/LunaeSomnia/Pagana"
authors = [ "-" ]
default-run = "pagana"
edition = "2018"
build = "./src/build.rs"
license = "GNU v2"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
cpal = "0.13.4" # -> https://crates.io/crates/cpal
rand = "0.8.4"

[dependencies.tauri]
version = "1.0.0-beta"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
